<resources>
    <string name="app_name">Church Attendance</string>
    <string name="smart_attendance">Smart Attendance</string>
    <string name="awaiting_scan">Awaiting scan…</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="tag_id">Tag ID</string>
    <string name="status">Status</string>
    <string name="save">Save</string>
    <string name="parent_info">Parent Info*</string>
    <string name="parent_s_name">Parent\'s Name</string>
    <string name="child_info">Child Info*</string>
    <string name="name">Name</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="scan_parent_fob">Scan parent fob*</string>
    <string name="scan_wristband">Scan wristband*</string>
    <string name="child_class">Child Class</string>
    <string name="discipleship">Discipleship</string>
    <string name="scan_a_wristband_or_fob_to_begin">Scan a wristband or fob to begin</string>
    <string name="_01_jan_2025">01 Jan 2025</string>
    <string name="yes">Yes</string>
    <string name="close">Close</string>
    <string name="ok">OK\n</string>
    <string name="dialog_success">Success</string>
    <string name="attendance_list">Attendance List</string>
    <string name="bible_verse">Proverbs 22:6\nTrain up a child in the way he should go; even when he is old he will not depart from it.</string>
    <string name="hi_james">Hi, James</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="r_kids">R-Kids</string>
    <string name="members">Members</string>
    <string name="assemblies">Assemblies</string>
</resources>