<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/keyline_2"
        app:cardUseCompatPadding="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_size_large"
            android:paddingTop="@dimen/margin_padding_size_medium"
            android:paddingEnd="@dimen/margin_padding_size_large"
            android:paddingBottom="@dimen/margin_padding_size_small">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/dialog_image"
                android:layout_width="@dimen/icon_small"
                android:layout_height="@dimen/icon_small"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true" />

            <TextView
                android:id="@+id/dialog_title"
                style="@style/TextViewAppearanceSemiBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?textAppearanceBody2"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_image"
                tools:text="@string/app_name" />

            <View
                android:id="@+id/verticalDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

            <TextView
                android:id="@+id/dialog_message"
                style="@style/TextViewAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?textAppearanceBody2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verticalDivider"
                tools:text="Log and Track Attendance" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialog_message">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/negative_button"
                    style="@style/SecondaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/positive_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Close" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positive_button"
                    style="@style/PrimaryButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/close"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/negative_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/positive_button_remove"
                    style="@style/SecondaryButton.Outline.Red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/yes"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/negative_button"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
